change name auth into user
