# internal/api/user/create_user.go
@@ -6,11 +6,11 @@ import (
 
 	"github.com/solumD/auth/internal/api/user/errors"
 	"github.com/solumD/auth/internal/converter"
-	desc "github.com/solumD/auth/pkg/auth_v1"
+	desc "github.com/solumD/auth/pkg/user_v1"
 )
 
 // CreateUser - отправляет запрос в сервисный слой на создание пользователя
-func (i *AuthAPI) CreateUser(ctx context.Context, req *desc.CreateUserRequest) (*desc.CreateUserResponse, error) {
+func (i *API) CreateUser(ctx context.Context, req *desc.CreateUserRequest) (*desc.CreateUserResponse, error) {
 	convertedReq := converter.ToUserFromDescUser(req)
 	if convertedReq == nil {
 		return nil, errors.ErrDescUserIsNil
