# internal/api/user/delete_user.go
@@ -4,13 +4,13 @@ import (
 	"context"
 	"log"
 
-	desc "github.com/solumD/auth/pkg/auth_v1"
+	desc "github.com/solumD/auth/pkg/user_v1"
 
 	"google.golang.org/protobuf/types/known/emptypb"
 )
 
 // DeleteUser - отправляет запрос в сервисный слой на удаление пользователя
-func (i *AuthAPI) DeleteUser(ctx context.Context, req *desc.DeleteUserRequest) (*emptypb.Empty, error) {
+func (i *API) DeleteUser(ctx context.Context, req *desc.DeleteUserRequest) (*emptypb.Empty, error) {
 	_, err := i.authService.DeleteUser(ctx, req.GetId())
 	if err != nil {
 		return nil, err
